--- a/TestDoitServer/TestDoitServer/Info.plist
+++ b/TestDoitServer/TestDoitServer/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your location is given to image when it has not own location metadata</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>to choose images for avatar and add images to app&apos;s collection</string>
 	<key>NSAppTransportSecurity</key>
